--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-requirejs": "^0.4.2"
   }
